package pt.isep.psoft.aisafe.domain;

public enum Manufacturer {
    BOEING,
    AIRBUS,
    EMBRAER,
    BOMBARDIER,
    ATR
}